--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,22 @@
       <artifactId>jackson-datatype-hibernate4</artifactId>
       <version>2.7.4</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.10-FINAL</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
+
   </dependencies>
   <build>
     <finalName>CareerManage</finalName>
